--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "highlighter",
+  "name": "highlight-string",
   "version": "0.0.1",
   "description": "helper for text highlighting",
   "main": "src/index.ts",
@@ -7,7 +7,11 @@
     "test": "jest",
     "build": "tsc",
     "lint": "eslint . --ext .ts",
-    "fix": "eslint . --ext .ts --fix"
+    "fix": "eslint . --ext .ts --fix",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.ts": "eslint"
   },
   "keywords": [
     "highlighter",
@@ -28,7 +32,9 @@
     "@typescript-eslint/eslint-plugin": "5.40.0",
     "@typescript-eslint/parser": "5.40.0",
     "eslint": "8.25.0",
+    "husky": "8.0.0",
     "jest": "29.2.0",
+    "lint-staged": "13.0.3",
     "prettier": "2.7.1",
     "ts-jest": "29.0.3",
     "typescript": "4.8.4"
