--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: 'lts/*'
           cache: yarn
       - name: Install dependencies
-        run: yarn --frozen-lockfile
+        run: yarn
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
